src/snapshots/bl__tests__snapshots__cmd_frame.snap
---
source: src/tests.rs
expression: render_command_help(&refs)
---
Find a frame by name or URL substring

Usage: bl frame [OPTIONS] <nameOrUrl>

Arguments:
  <nameOrUrl>  Frame name or URL substring to match

Options:
      --headless  Hide browser window (visible by default)
  -v, --verbose   Enable debug logging
      --json      Output as JSON
  -h, --help      Print help

Examples:
  bl frame "myIframe"
  # Find frame by name

  bl frame "example.com"
  # Find frame by URL substring
