src/snapshots/bl__tests__snapshots__cmd_go.snap
---
source: src/tests.rs
expression: render_command_help(&refs)
---
Go to a URL and print page info

Usage: bl go [OPTIONS] <url>

Arguments:
  <url>  URL to navigate to

Options:
      --headless  Hide browser window (visible by default)
  -v, --verbose   Enable debug logging
      --json      Output as JSON
  -h, --help      Print help
