src/snapshots/bl__tests__snapshots__cmd_hover.snap
---
source: src/tests.rs
expression: render_command_help(&refs)
---
Hover over an element by CSS selector

Usage: bl hover [OPTIONS] <args>...

Arguments:
  <args>...  [url] selector — optional URL to navigate first, then the selector to hover

Options:
      --headless  Hide browser window (visible by default)
  -v, --verbose   Enable debug logging
      --json      Output as JSON
  -h, --help      Print help

Examples:
  bl hover "a"
  # Hover over first link

  bl hover https://example.com "a"
  # Navigate then hover
