src/snapshots/bl__tests__snapshots__cmd_html.snap
---
source: src/tests.rs
expression: render_command_help(&refs)
---
Get HTML content of the page or an element

Usage: bl html [OPTIONS] [args]...

Arguments:
  [args]...  CSS selector, or a URL to navigate to first (optionally followed by a selector)

Options:
      --outer     Return outerHTML instead of innerHTML
  -v, --verbose   Enable debug logging
      --headless  Hide browser window (visible by default)
      --json      Output as JSON
  -h, --help      Print help

Examples:
  bl html
  # Get full page HTML

  bl html "div.content"
  # Get innerHTML of a specific element

  bl html "div.content" --outer
  # Get outerHTML of a specific element

  bl html https://example.com "h1"
  # Navigate then get element HTML
