src/snapshots/bl__tests__snapshots__cmd_install.snap
---
source: src/tests.rs
expression: render_command_help(&refs)
---
Download Chrome for Testing and chromedriver

Usage: bl install [OPTIONS]

Options:
      --json     Output as JSON
  -v, --verbose  Enable debug logging
  -h, --help     Print help
