src/snapshots/bl__tests__snapshots__cmd_is-installed.snap
---
source: src/tests.rs
expression: render_command_help(&refs)
---
Check if Chrome and chromedriver are installed (exit 0 = yes, exit 1 = no)

Usage: bl is-installed [OPTIONS]

Options:
      --json     Output as JSON
  -v, --verbose  Enable debug logging
  -h, --help     Print help
