src/snapshots/bl__tests__snapshots__cmd_is.snap
---
source: src/tests.rs
expression: render_command_help(&refs)
---
Check element state (visible, enabled, checked, actionable)

Usage: bl is [OPTIONS] [COMMAND]

Commands:
  visible     Check if an element is visible on the page
  enabled     Check if an element is enabled
  checked     Check if a checkbox or radio is checked
  actionable  Check actionability of an element (Visible, Stable, ReceivesEvents, Enabled, Editable)
  help        Print this message or the help of the given subcommand(s)

Options:
  -v, --verbose   Enable debug logging
      --headless  Hide browser window (visible by default)
      --json      Output as JSON
  -h, --help      Print help
