src/snapshots/bl__tests__snapshots__cmd_keys.snap
---
source: src/tests.rs
expression: render_command_help(&refs)
---
Press a key or key combination

Usage: bl keys [OPTIONS] <keys>

Arguments:
  <keys>  Key or key combination to press (e.g., Enter, Control+a, Shift+Tab)

Options:
      --headless  Hide browser window (visible by default)
  -v, --verbose   Enable debug logging
      --json      Output as JSON
  -h, --help      Print help

Examples:
  bl keys Enter
  # Press Enter

  bl keys "Control+a"
  # Select all

  bl keys "Shift+Tab"
  # Shift+Tab to previous field
