src/snapshots/bl__tests__snapshots__cmd_launch-test.snap
---
source: src/tests.rs
expression: render_command_help(&refs)
---
Launch browser via chromedriver and print BiDi WebSocket URL

Usage: bl launch-test [OPTIONS]

Options:
      --headless  Hide browser window (visible by default)
  -v, --verbose   Enable debug logging
  -h, --help      Print help
